--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.7.0",
-    "next": "12.0.7",
+    "mercadopago": "^1.5.12",
+    "next": "^12.0.9",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
