--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.3",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.7.0",
     "mercadopago": "^1.5.12",
@@ -16,7 +15,8 @@
     "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sharp": "^0.30.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
