--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.7.0",
+    "cors": "^2.8.5",
     "mercadopago": "^1.5.12",
     "next": "^12.0.9",
     "next-auth": "^4.0.6",
